create parameter `occupied_bg`

--- a/notebooks/2020.02.25-create-tables-entity-relationship-diagram.ipynb
+++ b/notebooks/2020.02.25-create-tables-entity-relationship-diagram.ipynb
@@ -76,8 +76,7 @@
        " 'architecture': {'fields': [{'name': 'Name', 'type': 'str'},\n",
        "   {'name': 'void_deck', 'type': 'int'},\n",
        "   {'constraints': {'max': 1}, 'name': 'Es', 'type': 'float'},\n",
-       "   {'constraints': {'max': 1}, 'name': 'Hs_ag', 'type': 'float'},\n",
-       "   {'constraints': {'max': 1}, 'name': 'Hs_bg', 'type': 'float'},\n",
+       "   {'constraints': {'max': 1}, 'name': 'Hs', 'type': 'float'},\n",
        "   {'constraints': {'max': 1}, 'name': 'Ns', 'type': 'float'},\n",
        "   {'constraints': {'max': 1}, 'name': 'wwr_north', 'type': 'float'},\n",
        "   {'constraints': {'max': 1}, 'name': 'wwr_east', 'type': 'float'},\n",
@@ -357,8 +356,7 @@
       "        <tr><td port=\"Name\" align=\"left\">str: Name</td></tr>\n",
       "        <tr><td port=\"void_deck\" align=\"left\">int: void_deck</td></tr>\n",
       "        <tr><td port=\"Es\" align=\"left\">float: Es</td></tr>\n",
-      "        <tr><td port=\"Hs_ag\" align=\"left\">float: Hs_ag</td></tr>\n",
-      "        <tr><td port=\"Hs_bg\" align=\"left\">float: Hs_bg</td></tr>\n",
+      "        <tr><td port=\"Hs\" align=\"left\">float: Hs</td></tr>\n",
       "        <tr><td port=\"Ns\" align=\"left\">float: Ns</td></tr>\n",
       "        <tr><td port=\"wwr_north\" align=\"left\">float: wwr_north</td></tr>\n",
       "        <tr><td port=\"wwr_east\" align=\"left\">float: wwr_east</td></tr>\n",
